crates/check_cli/tests/snapshots/main_commands_format/should_apply_different_formatting.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "formatter": {
    "indentStyle": "space"
  },
  "javascript": {
    "formatter": {
      "lineWidth": 320,
      "indentWidth": 8
    }
  },
  "json": {
    "formatter": {
      "lineWidth": 80,
      "indentWidth": 2
    }
  },
  "css": {
    "formatter": {
      "lineWidth": 40,
      "indentWidth": 6
    }
  }
}
```

## `input.css`

```css
html {
}

```

## `input.js`

```js
const a = {
        array: ["lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum"],
};

```

## `input.json`

```json
{
  "array": [
    "lorem ipsum",
    "lorem ipsum",
    "lorem ipsum",
    "lorem ipsum",
    "lorem ipsum",
    "lorem ipsum",
    "lorem ipsum"
  ]
}

```

# Emitted Messages

```block
Formatted 3 files in <TIME>. Fixed 3 files.
```
