crates/check_cli/tests/snapshots/main_commands_format/should_format_files_in_folders_ignored_by_linter.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "$schema": "https://checkjs.dev/schemas/1.6.1/schema.json",
  "assist": {
    "enabled": true
  },
  "linter": {
    "includes": ["**", "!**/build"],
    "enabled": true,
    "rules": {
      "recommended": true
    }
  }
}
```

## `build/file.js`

```js
value["optimizelyService"] = optimizelyService;

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
