crates/check_cli/tests/snapshots/main_commands_format/should_not_format_file_with_syntax_errors.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `invalid.js`

```js
while ) {}
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - invalid.js
  


```

# Emitted Messages

```block
invalid.js:1:7 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `(` but instead found `)`
  
  > 1 │ while ) {}
      │       ^
  
  i Remove )
  

```

```block
invalid.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Code formatting aborted due to parsing errors. To format code with errors, enable the 'formatter.formatWithErrors' option.
  

```

```block
Formatted 1 file in <TIME>. No fixes applied.
Found 1 error.
```
