crates/check_cli/tests/snapshots/main_commands_format/should_not_format_json_files_if_disabled.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "formatter": {
    "indentStyle": "space"
  },
  "javascript": {
    "formatter": {
      "lineWidth": 80,
      "indentWidth": 4
    }
  },
  "json": {
    "formatter": {
      "enabled": false
    }
  }
}
```

## `input.js`

```js
const a = {
    array: [
        "lorem ipsum",
        "lorem ipsum",
        "lorem ipsum",
        "lorem ipsum",
        "lorem ipsum",
        "lorem ipsum",
        "lorem ipsum",
    ],
};

```

## `input.json`

```json

{
    "array": ["lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum"]
}
	
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
