crates/check_cli/tests/snapshots/main_commands_format/trailing_commas_parse_errors.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `NONE`: Value not supported for TrailingCommas
  


```
