crates/check_cli/tests/snapshots/main_commands_format/vcs_absolute_path.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": false
  }
}
```

## `.gitignore`

```gitignore
file.js
```

## `/symbolic/link/to/path.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
